--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "build-local": "vue-cli-service build --mode local",
+    "local": "vue-cli-service serve --mode local",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "mitt": "^3.0.1",
+    "terser-webpack-plugin": "^5.3.9",
     "vue": "^3.2.13"
   },
   "devDependencies": {
